[package]
name = "momms"
version = "0.2.0"
authors = ["Tyler Smith <tms@cs.utexas.edu>"]
build = "build.rs"

[dependencies]
rand = "0.3"
libc = "0.2.0"
typenum = "1.3.1"
thread_local = "0.2.6"
hwloc = "0.3.0"
threadpool = "1.3.2"

[profile.release]
lto = true

[lib]
name = "momms"
path = "src/lib.rs"

[[bin]]
name = "exper_l3"
path = "src/exper/l3.rs"

[[bin]]
name = "exper_l3_shapes"
path = "src/exper/l3_shapes.rs"

[[bin]]
name = "exper_l3_packing"
path = "src/exper/l3_packing.rs"

[[bin]]
name = "exper_l4"
path = "src/exper/l4.rs"

[[bin]]
name = "exper_l4_packing"
path = "src/exper/l4_packing.rs"

[[bin]]
name = "exper_out_of_core"
path = "src/exper/out_of_core.rs"

[features]
blis = []
hsw = []
snb = []
